--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "johnlui/aliyun-oss": "~2.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
@@ -37,7 +38,8 @@
         },
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "app/services"
         ]
     },
     "autoload-dev": {
