--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.0",
         "johnlui/aliyun-oss": "~2.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "mrgoon/aliyun-sms": "dev-master"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
