--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "johnlui/aliyun-oss": "~2.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "mrgoon/aliyun-sms": "dev-master"
+        "mrgoon/aliyun-sms": "dev-master",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
