--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "mrgoon/aliyun-sms": "dev-master",
+        "overtrue/laravel-wechat": "~5.0",
         "predis/predis": "^1.1"
     },
     "require-dev": {
