--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.3",
+        "jacobcyl/ali-oss-storage": "^2.1",
         "johnlui/aliyun-oss": "~2.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
